--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>clima</title>
 </head>
 <body>
@@ -14,9 +15,9 @@
             <img src="" alt="">
             <p>velocidad del veinto</p> -->
         </div>
-        <form action="clima">
+        <form action="clima" id="clima">
             <input type="text" id="city" class="city">
-            <input type="submit">
+            <input type="submit" class="submit">
 
         </form>
     </section>
