--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 </head>
 <body>
     <section class="section">
-        <div class="result">
-            <!-- <h2>clima actual</h2>
-            <p>nombre de ciudad</p>
-            <img src="" alt="">
-            <p>velocidad del veinto</p> -->
+        <div class="info">
+            <p>Introduce tu ciudad</p>
         </div>
         <form action="clima" id="clima">
             <input type="text" id="city" class="city">
