--- a/index.html
+++ b/index.html
@@ -10,10 +10,30 @@
 <body>
     <section class="section">
         <div class="info">
-            <p>Introduce tu ciudad</p>
+           
         </div>
+        <!-- <div class="daysThree">
+            <div>
+                <p>name</p>
+                <img src="" alt="">
+                <p>temperatura</p>
+                <p>fecha</p>
+            </div>
+            <div>
+                <p>name</p>
+                <img src="" alt="">
+                <p>temperatura</p>
+                <p>fecha</p>
+            </div>
+            <div>
+                <p>name</p>
+                <img src="" alt="">
+                <p>temperatura</p>
+                <p>fecha</p>
+            </div>
+        </div> -->
         <form action="clima" id="clima">
-            <input type="text" id="city" class="city">
+            <input type="text" id="city" class="city"  placeholder="Busca tu ciudad" >
             <input type="submit" class="submit">
 
         </form>
